Initial commit for new repository

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "purinecontrol-app",
-  "homepage": "https://aaronlu8.github.io/purine_control",
+  "homepage": "https://aaronlu8.github.io/Purineassist",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
