--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "GENERATE_SOURCEMAP=false react-scripts build",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "deploy:gitee": "npm run build && cd build && git init && git add . && git commit -m 'deploy' && git push -f git@gitee.com:luuaaron/gout.git master:pages",
